get list endpoints returning json as expected