@@ -1,12 +1,16 @@
 package dev.dylan.Sonodex;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.MapperFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.google.gson.JsonArray;
 import dev.dylan.Sonodex.entity.Artist;
 import dev.dylan.Sonodex.entity.Track;
 import dev.dylan.Sonodex.view.JsonViewProfiles;
+import org.json.JSONArray;
 
+import java.io.IOException;
 import java.text.SimpleDateFormat;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,6 +23,7 @@ public final class JsonUtilities {
         mapper.setDateFormat(new SimpleDateFormat( "yyyy-MM-dd"));
         return mapper;
     }
+
     public static String ArtistView(Artist artist) {
         try {
             return configuredMapper().writerWithView(JsonViewProfiles.Artist.class).writeValueAsString(artist);
@@ -27,10 +32,10 @@ public final class JsonUtilities {
         }
     }
 
-    public static List<String> ArtistView(List<Artist> artists) {
+    public static String ArtistView(List<Artist> artists) {
        return artists.stream()
                 .map(JsonUtilities::ArtistView)
-                .collect(Collectors.toList());
+                .toList().toString();
     }
 
     public static String TrackView(Track track) {
@@ -41,9 +46,9 @@ public final class JsonUtilities {
         }
     }
 
-    public static List<String> TrackView(List<Track> tracks) {
+    public static String TrackView(List<Track> tracks) {
         return tracks.stream()
                 .map(JsonUtilities::TrackView)
-                .collect(Collectors.toList());
+                .toList().toString();
     }
 }
